yaml/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: menu-backend
  labels:
    id: menu-backend

spec:
  containers:
    - name: menu-backend
      image: scilifelabdatacentre/menu-backend:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 250m
          memory: 50Mi
        requests:
          cpu: 50m
          memory: 40Mi
