yaml/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  labels:
    name: menu-service
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: 80
  selector:
    id: menu-frontend
